[package]
name = "yolo_server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.7"
uuid = { version = "1.17", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
axum = "0.8.4"
yolo_core = { path = "../yolo_core/" }
anyhow = "1.0"
